force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/leaseworks__Liquidity_and_Fleet_Metrics__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Liquidity and Fleet Metrics</label>
    <nameField>
        <label>Liquidity and Fleet Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liquidity and Fleet Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>