force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/fields/leaseworks__Early_Returns__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Returns__c</fullName>
    <label>Early Returns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Aircraft_Type</valueSetName>
    </valueSet>
</CustomField>