force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/fields/leaseworks__Government_Support__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Government_Support__c</fullName>
    <label>Government Support?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Future Commitments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>