force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/fields/leaseworks__Govt_Support_Conditions_and_Commentary__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Govt_Support_Conditions_and_Commentary__c</fullName>
    <label>Govt Support Conditions and Commentary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>