force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/fields/leaseworks__Liquidity_Monthly_Cash_Burn_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Liquidity_Monthly_Cash_Burn_As_Of_Date__c</fullName>
    <label>Liquidity/Monthly Cash Burn As Of Date</label>
    <type>Date</type>
</CustomField>