force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/fields/leaseworks__Shareholders_Support__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Shareholders_Support__c</fullName>
    <label>Shareholders Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <label>Yes, Current</label>
            </value>
            <value>
                <fullName>Future Commitments</fullName>
                <label>Yes, Future Commitments</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>