force-app/main/default/objects/leaseworks__Liquidity_and_Fleet_Metrics__c/fields/leaseworks__Types_Scheduled_To_Be_Returned__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Types_Scheduled_To_Be_Returned__c</fullName>
    <label>Types Scheduled To Be Returned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Aircraft_Type</valueSetName>
    </valueSet>
</CustomField>